--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 /*Farkli dosyalarda yazdigimiz stillerin devreye girmesi icin bu dosyalari style.scss'te import ederiz*/
+.button {
+  background: var(--gradient-color);
+  padding: 12px;
+  color: white;
+  border-radius: 64px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: var(--font-semi-bold);
+  column-gap: 8px;
+  transition: all 0.6s;
+}
+.button i {
+  background-color: var(--first-color);
+  color: white;
+  font-size: 1.5rem;
+  padding: 0 4px;
+  border-radius: 50%;
+}
+.button:hover {
+  box-shadow: 0 12px 30px hsla(23, 100%, 50%, 0.3);
+}
+
 .header {
   border: 1px solid red;
   width: 100%;
@@ -36,7 +59,6 @@
 
 .home__container {
   display: flex;
-  border: 1px solid red;
   padding: 112px 16px;
   position: relative;
 }
@@ -53,11 +75,72 @@
   position: absolute;
   top: -32px;
   display: flex;
-  column-gap: 70px;
+  column-gap: 7px;
   justify-self: center;
 }
 .home__title span {
   font-size: var(--biggest-font-size);
+}
+.home__title span:nth-child(2) {
+  z-index: -1;
+}
+.home__tooltip {
+  position: absolute;
+  top: -8px;
+  right: 24px;
+}
+.home__tooltip-img {
+  width: 60px;
+}
+.home__tooltip-text {
+  position: absolute;
+  background: var(--gradient-color);
+  color: var(--white-color);
+  padding: 6px 12px;
+  border-radius: 64px;
+  transform: translate(-10px, -16px);
+  white-space: nowrap;
+}
+.home__social {
+  display: grid;
+  justify-content: center;
+  position: absolute;
+  top: 50px;
+  left: -104px;
+  row-gap: 96px;
+}
+.home__social-text {
+  position: relative;
+  rotate: 90deg;
+  font-size: var(--small-font-size);
+  font-weight: var(--font-medium);
+}
+.home__social-text::after {
+  content: "";
+  background-color: var(--text-color);
+  width: 50px;
+  height: 1px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -64px;
+  margin: auto;
+}
+.home__social-links {
+  display: grid;
+  row-gap: 12px;
+  margin: auto;
+}
+.home__social-link {
+  color: var(--text-color);
+  font-size: 20px;
+  transition: all 0.4s;
+}
+.home__social-link:hover {
+  color: var(--first-color);
+}
+.home__button {
+  justify-self: center;
 }
 
 * {
@@ -116,3 +199,7 @@ h1, h2, h3, h4 {
   display: grid;
   gap: 24px;
 }
+
+.section {
+  padding-block: 80px 16px;
+}/*# sourceMappingURL=style.css.map */
