--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -2,7 +2,6 @@
 
     &__container{
         display: flex;
-        border: 1px solid red;
         padding: 112px 16px;
         position: relative;
     }
@@ -26,7 +25,81 @@
         position: absolute;
         top: -32px;
         display: flex;
-        column-gap: 70px;
+        column-gap: 7px;
+        justify-self: center;
+        span:nth-child(2){
+            z-index: -1;
+        }
+    }
+
+    &__tooltip{
+        position: absolute;
+        top: -8px;
+        right: 24px;
+        &-img{
+            width: 60px;
+        }
+        &-text{
+            position: absolute;
+            background: var(--gradient-color);
+            color: var(--white-color);
+            padding: 6px 12px;
+            border-radius: 64px;
+            transform: translate(-10px,-16px);
+            white-space: nowrap;
+        }
+    }
+
+    &__social{
+
+        display: grid;
+        justify-content: center;
+        position: absolute;
+        top: 50px;
+        left: -104px;
+        row-gap: 96px;
+        
+        &-text{
+            position: relative;
+            rotate: 90deg;
+            font-size: var(--small-font-size);
+            font-weight: var(--font-medium);
+            &::after{
+                content: "";
+                background-color: var(--text-color);
+                width: 50px;
+                height: 1px;
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                right: -64px;
+                margin: auto;
+
+            }
+        }
+
+        &-links{
+            display: grid;
+            row-gap: 12px;
+            margin: auto;
+
+
+        }
+
+        &-link{
+            color: var(--text-color) ;
+            font-size: 20px;
+            transition: all 0.4s;
+            &:hover{
+                color: var(--first-color);
+            }
+        }
+
+        
+
+    }
+
+    &__button {
         justify-self: center;
     }
 }
