--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 /*Farkli dosyalarda yazdigimiz stillerin devreye girmesi icin bu dosyalari style.scss'te import ederiz*/
 
-@import "mixin";
-@import "variables";
+@import "button";
 @import "header";
+
 @import "home";
+
 
 
 *{
@@ -50,6 +51,7 @@ body{
     background-color:var(--body-color) ;
     color: var(--text-color);
 }
+
 h1,h2,h3,h4{
     color: var(--white-color);
     font-weight: var(--font-semi-bold);
@@ -61,4 +63,8 @@ h1,h2,h3,h4{
 .grid{
     display: grid;
     gap: 24px;
+}
+
+.section{
+    padding-block:  80px 16px; // padding top ile bottom ozelliklerinin birlesimi kisaltmasi gibi
 }
