favorite section completed

--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,30 @@
   justify-self: center;
 }
 
+.favorite {
+  text-align: center;
+  padding: 10px 40px;
+}
+.favorite-card {
+  display: flex;
+  justify-content: center;
+}
+.favorite-card div {
+  display: flex;
+}
+.favorite-card img {
+  width: 200px;
+}
+.favorite-article {
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 850px) {
+  .favorite-card div {
+    flex-direction: column;
+  }
+}
 * {
   margin: 0;
   padding: 0;
