--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,21 @@
   left: 120px;
 }
 
+.sponsor__img {
+  width: 150px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.sponsor__img:hover {
+  transform: scale(1.1);
+}
+.sponsor__container {
+  grid-template-columns: repeat(2, max-content);
+  justify-content: center;
+  align-items: center;
+  padding-block: 8px 72px;
+}
+
 * {
   margin: 0;
   padding: 0;
