--- a/css/style.css
+++ b/css/style.css
@@ -15,8 +15,8 @@
 .button i {
   background-color: var(--first-color);
   color: white;
-  font-size: 1.5rem;
-  padding: 0 4px;
+  font-size: 1.4rem;
+  padding: 2px 6px;
   border-radius: 50%;
 }
 .button:hover {
@@ -247,6 +247,72 @@
   justify-content: center;
   align-items: center;
   padding-block: 8px 72px;
+}
+
+.footer {
+  display: grid;
+  margin-left: 40px;
+}
+.footer__container {
+  row-gap: 64px;
+}
+.footer__logo {
+  font-size: var(--h2-font-size);
+  color: var(--first-color);
+  font-weight: 600;
+}
+.footer__data {
+  grid-template-columns: repeat(2, 1fr);
+}
+.footer__title {
+  margin-bottom: 32px;
+  font-size: var(--h3-font-size);
+}
+.footer__links {
+  display: grid;
+  row-gap: 10px;
+}
+.footer__link {
+  color: var(--text-color);
+  transition: all 0.3s;
+}
+.footer__link:hoveR {
+  color: var(--first-color);
+}
+.footer__group {
+  display: grid;
+}
+.footer__group input {
+  border: none;
+  outline: none;
+  padding: 20px 30px;
+  background-color: var(--container-color);
+  color: var(--first-color);
+  border-radius: 64px;
+  margin-bottom: 20px;
+}
+.footer__group button {
+  border: none;
+  cursor: pointer;
+}
+.footer__social {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.footer__social div {
+  display: flex;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+.footer__social div a {
+  color: var(--text-color);
+  transition: all 0.3s;
+}
+.footer__social div a:hover {
+  color: var(--first-color);
 }
 
 * {
