--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -13,8 +13,8 @@
     i{
         background-color: var(--first-color);
         color: white;
-        font-size:1.5rem;
-        padding: 0 4px;
+        font-size:1.4rem;
+        padding: 2px 6px;
         border-radius: 50%;
     }
     &:hover{
