--- a/sass/_favorite.scss
+++ b/sass/_favorite.scss
@@ -1,6 +1,9 @@
 .favorite{
     text-align: center;
     padding: 10px 40px;
+    h2{
+        font-size: 30px;
+    }
     &-card{
         display: flex;
         justify-content: center;
