--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -6,7 +6,7 @@
     top: 0;
     left: 0;
     z-index: 99;
-
+    backdrop-filter: blur(15px);
     .nav{
         display: flex;
         justify-content: space-between;
@@ -33,4 +33,16 @@
             }
         }
     }
+}
+
+@media screen and (max-width:850px) {
+    .header .nav__list{
+        display: none;
+    }
+
+    .nav .nav__logo{
+        margin: auto;
+        font-size: 50px;
+    }
+
 }
