--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,13 +1,63 @@
 @media screen and (max-width:340px) {
-    
+    .container{
+        margin-inline: 16px;
+    }
+    .home{
+        &__img{
+            width: 180px;
+        }
+
+        &__title{
+            font-size: 129px;
+        }
+    }
+
+   
 }
 
 @media screen and (min-width:576px) {
-    
+    .about{
+        &__container{
+            grid-template-columns: 380px;
+            justify-content: center;
+        }
+    }
 }
 
 @media screen and (min-width:768px) {
-    
+    .home{
+        &__img{
+            width: 320px;
+        }
+
+        &__title{
+            font-size: 256px;
+            top: -64px;
+        }
+
+        &__social{
+/*             top: 0;
+            bottom: 0;
+            align-items: center; */
+        }
+    }
+
+    .sponsor__container{
+        grid-template-columns: repeat(4,max-content);
+    }
+
+    .sponsor__container img:nth-child(3){
+        margin-top: 18px;
+    }
+
+    .footer__container{
+        justify-content: space-between;
+    }
+
+    .footer__data{
+        grid-template-columns: repeat(3,1fr);
+        column-gap: 20px !important;
+    }
 }
 @media screen and (min-width:1150px) {
     .container{
@@ -74,5 +124,27 @@
 
     .favorite .favorite-articles{
         gap: 60px;
+    }
+
+    .model__img{
+        width: 500px;
+    }
+    .model__tooltip-img{
+        width: initial;
+    }
+
+    .model__tooltip-text{
+        font-size: var(--normal-font-size);
+        padding: 8px 20px;
+      
+    }
+    .model__tooltip-1{
+        top: 160px;
+        left: 160px;
+    }
+
+    .model__tooltip-3{
+        bottom:100px ;
+        right: 120px;
     }
 }
