--- a/sass/style.scss
+++ b/sass/style.scss
@@ -20,7 +20,9 @@
     text-decoration: none;
     list-style: none;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 
 :root {
     --header-height: 3.5rem;
