--- a/css/style.css
+++ b/css/style.css
@@ -35,14 +35,18 @@
 }
 .header .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  position: relative;
   height: var(--header-height);
 }
 .header .nav__logo {
   color: var(--first-color);
   font-size: 30px;
   font-weight: var(--font-semi-bold);
+  position: absolute;
+  left: 10px;
+  top: 8px;
 }
 .header .nav__list {
   display: flex;
@@ -65,6 +69,9 @@
   .nav .nav__logo {
     margin: auto;
     font-size: 50px;
+    position: relative;
+    top: auto;
+    left: auto;
   }
 }
 .home__container {
@@ -79,6 +86,7 @@
 }
 .home__img {
   width: 220px;
+  margin-bottom: 20px;
 }
 .home__title {
   color: var(--first-color);
@@ -115,8 +123,8 @@
   display: grid;
   justify-content: center;
   position: absolute;
-  top: 50px;
-  left: -104px;
+  top: 140px;
+  left: -224px;
   row-gap: 96px;
 }
 .home__social-text {
@@ -153,6 +161,12 @@
   justify-self: center;
 }
 
+@media screen and (max-width: 700px) {
+  .home__social {
+    left: -90px;
+    top: 40px;
+  }
+}
 .about {
   margin-bottom: 50px;
 }
@@ -192,12 +206,20 @@
 .favorite-article {
   display: flex;
   flex-direction: column;
+  transition: all 0.3s;
+}
+.favorite-article:hover {
+  transform: scale(1.2);
 }
 
 @media screen and (max-width: 850px) {
   .favorite-card div {
     flex-direction: column;
   }
+}
+.model {
+  margin-bottom: 100px;
+  margin-top: 100px;
 }
 .model h2 {
   text-align: center;
@@ -242,6 +264,9 @@
   left: 120px;
 }
 
+.sponsor {
+  margin-top: 70px;
+}
 .sponsor__img {
   width: 150px;
   cursor: pointer;
@@ -251,6 +276,7 @@
   transform: scale(1.1);
 }
 .sponsor__container {
+  gap: 50px !important;
   grid-template-columns: repeat(2, max-content);
   justify-content: center;
   align-items: center;
@@ -260,6 +286,7 @@
 .footer {
   display: grid;
   margin-left: 40px;
+  margin-top: 100px;
 }
 .footer__container {
   row-gap: 64px;
@@ -309,6 +336,7 @@
   justify-content: center;
   align-items: center;
   margin-top: 50px;
+  margin-bottom: 30px;
 }
 .footer__social div {
   display: flex;
@@ -323,6 +351,50 @@
   color: var(--first-color);
 }
 
+@media screen and (max-width: 340px) {
+  .container {
+    margin-inline: 16px;
+  }
+  .home__img {
+    width: 180px;
+  }
+  .home__title {
+    font-size: 129px;
+  }
+}
+@media screen and (min-width: 576px) {
+  .about__container {
+    grid-template-columns: 380px;
+    justify-content: center;
+  }
+}
+@media screen and (min-width: 768px) {
+  .home__img {
+    width: 320px;
+  }
+  .home__title {
+    font-size: 256px;
+    top: -64px;
+  }
+  .home__social {
+    /*             top: 0;
+                bottom: 0;
+                align-items: center; */
+  }
+  .sponsor__container {
+    grid-template-columns: repeat(4, max-content);
+  }
+  .sponsor__container img:nth-child(3) {
+    margin-top: 18px;
+  }
+  .footer__container {
+    justify-content: space-between;
+  }
+  .footer__data {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 20px !important;
+  }
+}
 @media screen and (min-width: 1150px) {
   .container {
     margin-inline: auto;
@@ -369,6 +441,24 @@
   .favorite .favorite-articles {
     gap: 60px;
   }
+  .model__img {
+    width: 500px;
+  }
+  .model__tooltip-img {
+    width: initial;
+  }
+  .model__tooltip-text {
+    font-size: var(--normal-font-size);
+    padding: 8px 20px;
+  }
+  .model__tooltip-1 {
+    top: 160px;
+    left: 160px;
+  }
+  .model__tooltip-3 {
+    bottom: 100px;
+    right: 120px;
+  }
 }
 * {
   margin: 0;
@@ -378,6 +468,10 @@
   font-size: var(--normal-font-size);
   text-decoration: none;
   list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 :root {
