--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,6 +1,7 @@
 .footer{
     display: grid;
     margin-left: 40px;
+    margin-top: 100px;
     &__container{
         row-gap: 64px;
 
@@ -56,6 +57,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 50px;
+        margin-bottom: 30px;
         div{
             display: flex;
             gap: 20px;
