--- a/sass/_home.scss
+++ b/sass/_home.scss
@@ -14,6 +14,7 @@
 
     &__img{
         width: 220px;
+        margin-bottom: 20px;
     }
 
     &__title{
@@ -54,8 +55,8 @@
         display: grid;
         justify-content: center;
         position: absolute;
-        top: 50px;
-        left: -104px;
+        top: 140px;
+        left: -224px;
         row-gap: 96px;
         
         &-text{
@@ -100,5 +101,14 @@
 
     &__button {
         justify-self: center;
+    }
+}
+
+@media screen and (max-width:700px) {
+    .home{
+        &__social{
+            left: -90px;
+            top: 40px;
+        }
     }
 }
