--- a/sass/_sponsor.scss
+++ b/sass/_sponsor.scss
@@ -1,4 +1,5 @@
 .sponsor{
+    margin-top: 70px;
     &__img{
         width: 150px;
         cursor: pointer;
@@ -8,6 +9,7 @@
         }
     }
     &__container{
+        gap: 50px !important;
         grid-template-columns: repeat(2,max-content);
         justify-content: center;
         align-items: center;
